--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,3 +27,10 @@ nav a:hover {
 nav a.active {
   color: #039be5;
 }
+
+
+/*
+Copyright 2017-2018 Google Inc. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that
+can be found in the LICENSE file at http://angular.io/license
+*/
