--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,8 +2,9 @@
 <div class="grid grid-pad">
   <a *ngFor="let hero of heroes" class="col-1-4"
      routerLink="/detail/{{hero.id}}">
-    <div class="module hero">
+    <div class="module hero style-{{hero.getStyle()}}">
       <h4>{{hero.name}}</h4>
     </div>
   </a>
 </div>
+<app-hero-search></app-hero-search>
