--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -38,7 +38,7 @@
   font-size: small;
   color: white;
   padding: 0.8em 0.7em 0 0.7em;
-  background-color: #607D8B;
+  #background-color: #607D8B;
   line-height: 1em;
   position: relative;
   left: -1px;
@@ -71,7 +71,6 @@ button.delete {
   background-color: gray !important;
   color: white;
 }
-
 
 
 /*
