--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,8 +1,9 @@
-<div *ngIf="messageService.messages.length">
+<div *ngIf="messageService.messages.length" class="messages-panel">
 
   <h2>Messages</h2>
   <button class="clear"
           (click)="messageService.clear()">clear</button>
-  <div *ngFor='let message of messageService.messages'> {{message}} </div>
-
+  <div class="messages-list">
+    <div *ngFor='let message of messageService.messages'> {{message}} </div>
+  </div>
 </div>
