--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,6 +7,6 @@
       <input [(ngModel)]="hero.name" placeholder="name"/>
     </label>
   </div>
-  <button (click)="goBack()">go back</button>
-  <button (click)="save()">save</button>
+  <button mat-raised-button color="primary" (click)="goBack()">go back</button>
+  <button mat-raised-button color="primary" (click)="save()">save</button>
 </div>
