--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,10 +1,10 @@
 <h2>My Heroes</h2>
 <div>
-  <label>Hero name:
-    <input #heroName />
-  </label>
+  <mat-form-field class="example-full-width">
+    <input #heroName matInput placeholder="Hero name" value="">
+  </mat-form-field>
   <!-- (click) passes input value to add() and then clears the input -->
-  <button (click)="add(heroName.value); heroName.value=''">
+  <button mat-raised-button color="secondary" (click)="add(heroName.value); heroName.value=''">
     add
   </button>
 </div>
@@ -13,6 +13,6 @@
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge style-{{hero.getStyle()}}">{{hero.name.substring(0,1)}}</span> {{hero.name}}
     </a>
-    <button class="delete" title="delete hero" (click)="delete(hero)">x</button>
+    <button mat-raised-button color="secondary" (click)="delete(hero)">x</button>
   </li>
 </ul>
