Angular material conversions

--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,12 +1,23 @@
 <div id="search-component">
-  <mat-form-field class="example-full-width">
+  <!--mat-form-field class="example-full-width">
   <input matInput placeholder="search" id="search-box" (keyup)="search(searchBox.value)" />
-  </mat-form-field>
-  <ul class="search-result">
+  </mat-form-field-->
+  <!--ul class="search-result">
     <li *ngFor="let hero of heroes$ | async" >
       <a routerLink="/detail/{{hero.id}}">
         {{hero.name}}
       </a>
     </li>
-  </ul>
+  </ul-->
+
+  <form>
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Search..." aria-label="Search..." [matAutocomplete]="auto" [formControl]="heroCtrl">
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let hero of filteredHeroes | async" [value]="hero.name">
+          <span>{{ hero.name }}</span>
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </form>
 </div>
