--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 /* Master Styles */
 h1 {
   color: #369;
@@ -81,6 +83,16 @@ nav a.active {
 }
 
 
+.fill-remaining-space {
+  /* This fills the remaining space, by using flexbox.
+     Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
+}
+
+
+.mat-toolbar .mat-form-field-label {
+  #font-size: 12px;
+}
 
 /*
 Copyright 2017-2018 Google Inc. All Rights Reserved.
