--- a/src/web-app/app/app.component.html
+++ b/src/web-app/app/app.component.html
@@ -1,13 +1,16 @@
-
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <button mat-raised-button color="secondary" routerLink="/dashboard">Dashboard</button>
-    <button mat-raised-button color="secondary" routerLink="/heroes">Heroes</button>
+    <button mat-raised-button color="secondary" routerLink="/heroes/dashboard">Dashboard</button>
+    <button mat-raised-button color="secondary" routerLink="/heroes/list">Heroes</button>
+    <button mat-raised-button color="secondary" routerLink="/lines">Lines</button>
     <span class="fill-remaining-space"></span>
 
     <app-hero-search></app-hero-search>
   </mat-toolbar-row>
 </mat-toolbar>
+
+
+
 <div class="app-content">
   <router-outlet></router-outlet>
   <app-messages></app-messages>
