--- a/src/web-app/app/app.component.scss
+++ b/src/web-app/app/app.component.scss
@@ -13,16 +13,16 @@ nav {
   float: left;
 }
 
-app-hero-search{
-  float:right;
+app-hero-search {
+  float: right;
 }
 
-.app-content{
+.app-content {
   margin: 2em;
 }
 
-.header{
-  background-color: #1B4965;
+.header {
+  background-color: #1b4965;
   height: 28px;
   padding: 10px;
 }
@@ -34,15 +34,14 @@ nav a {
   background-color: #eee;
   border-radius: 4px;
 }
-nav a:visited, a:link {
-  color: #607D8B;
+nav a:visited,
+a:link {
+  color: #607d8b;
 }
 nav a:hover {
   color: #039be5;
-  background-color: #CFD8DC;
+  background-color: #cfd8dc;
 }
 nav a.active {
   color: #039be5;
 }
-
-
