--- a/src/web-app/app/heroes/dashboard/hero-dashboard.component.scss
+++ b/src/web-app/app/heroes/dashboard/hero-dashboard.component.scss
@@ -10,13 +10,16 @@
 a {
   text-decoration: none;
 }
-*, *:after, *:before {
+*,
+*:after,
+*:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 h3 {
-  text-align: center; margin-bottom: 0;
+  text-align: center;
+  margin-bottom: 0;
 }
 h4 {
   position: relative;
@@ -33,11 +36,11 @@ h4 {
   color: #eee;
   max-height: 120px;
   min-width: 120px;
-  #background-color: #607D8B;
+  background-color: #607d8b;
   border-radius: 2px;
 }
 .module:hover {
-  background-color: #EEE;
+  background-color: #eee;
   cursor: pointer;
   color: #607d8b;
 }
@@ -50,7 +53,8 @@ h4 {
 @media (max-width: 600px) {
   .module {
     font-size: 10px;
-    max-height: 75px; }
+    max-height: 75px;
+  }
 }
 @media (max-width: 1024px) {
   .grid {
