--- a/src/web-app/app/heroes/list/hero-list.component.scss
+++ b/src/web-app/app/heroes/list/hero-list.component.scss
@@ -3,22 +3,24 @@
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
-  #width: 15em;
+  width: 15em;
 }
-.heroes li, .heroes mat-list-item {
+.heroes li,
+.heroes mat-list-item {
   position: relative;
   cursor: pointer;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
+  background-color: #eee;
+  margin: 0.5em;
+  padding: 0.3em 0;
   height: 1.6em;
   border-radius: 4px;
 }
 
-.heroes li:hover, .heroes mat-list-item:hover {
-  color: #607D8B;
-  background-color: #DDD;
-  left: .1em;
+.heroes li:hover,
+.heroes mat-list-item:hover {
+  color: #607d8b;
+  background-color: #ddd;
+  left: 0.1em;
 }
 
 .heroes a {
@@ -26,11 +28,11 @@
   text-decoration: none;
   position: relative;
   display: block;
-  #width: 250px;
+  width: 250px;
 }
 
 .heroes a:hover {
-  color:#607D8B;
+  color: #607d8b;
 }
 
 .heroes .badge {
@@ -38,7 +40,7 @@
   font-size: small;
   color: white;
   padding: 0.8em 0.7em 0 0.7em;
-  #background-color: #607D8B;
+  background-color: #607d8b;
   line-height: 1em;
   position: relative;
   left: -1px;
@@ -46,11 +48,9 @@
   height: 1.8em;
   min-width: 16px;
   text-align: right;
-  margin-right: .8em;
+  margin-right: 0.8em;
   border-radius: 4px 0 0 4px;
 }
-
-
 
 button:hover {
   background-color: #cfd8dc;
@@ -63,7 +63,6 @@ button.delete {
   background-color: gray !important;
   color: white;
 }
-
 
 /*
 Copyright 2017-2018 Google Inc. All Rights Reserved.
