--- a/src/web-app/styles.scss
+++ b/src/web-app/styles.scss
@@ -1,4 +1,4 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 /* Master Styles */
 h1 {
@@ -6,7 +6,8 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
-h2, h3 {
+h2,
+h3 {
   color: #444;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
@@ -15,7 +16,9 @@ body {
   margin: 0px;
   background-color: #fff;
 }
-body, input[text], button {
+body,
+input[text],
+button {
   color: #888;
   font-family: Cambria, Georgia;
 }
@@ -50,12 +53,13 @@ nav a {
   background-color: #eee;
   border-radius: 4px;
 }
-nav a:visited, a:link {
-  color: #607D8B;
+nav a:visited,
+a:link {
+  color: #607d8b;
 }
 nav a:hover {
   color: #039be5;
-  background-color: #CFD8DC;
+  background-color: #cfd8dc;
 }
 nav a.active {
   color: #039be5;
@@ -70,18 +74,17 @@ nav a.active {
   background-color: #cf8acf;
 }
 .style-1 {
-  background-color: #6461A0;
+  background-color: #6461a0;
 }
 .style-2 {
   background-color: #949396;
 }
 .style-3 {
-  background-color: #314CB6;
+  background-color: #314cb6;
 }
 .style-4 {
-  background-color: #0A81D1;
+  background-color: #0a81d1;
 }
-
 
 .fill-remaining-space {
   /* This fills the remaining space, by using flexbox.
@@ -89,9 +92,8 @@ nav a.active {
   flex: 1 1 auto;
 }
 
-
 .mat-toolbar .mat-form-field-label {
-  #font-size: 12px;
+  font-size: 12px;
 }
 
 /*
