--- a/src/web-app/app/lines/list/line-list.component.html
+++ b/src/web-app/app/lines/list/line-list.component.html
@@ -1,21 +1,24 @@
 <h3>ALL Lines</h3>
 
-<mat-grid-list cols="4" rowHeight="25px">
-  <mat-grid-tile *ngFor="let line of lines" routerLink="/lines/{{line.number}}" [colspan]="1" [rowspan]="1" [style.background]="">
-    <h2>{{line.number}}</h2>
+
+<mat-grid-list cols="3" rowHeight="200px">
+  <mat-grid-tile *ngFor="let line of lines" routerLink="/lines/{{line.number}}" [colspan]="1" [rowspan]="1" [style.background]="'#'+line.color">
+    <h2 [style.color]="'#'+line.text_color">{{line.number}} - {{line.destination.fr}}</h2>
   </mat-grid-tile>
 </mat-grid-list>
 
 
-  <mat-grid-list cols="4" rowheight="75px"  *ngFor="let line of lines" routerLink="/lines/{{line.number}}" >
-      <mat-grid-tile rowspan="2" colspan="1" [style.background]="lightblue">
-        <h2> LINE NUMBER </h2>
-      </mat-grid-tile>
-      <mat-grid-tile rowspan="1" colspan="2" [style.background]="lightgreen">
-        <h2> DESTINATION FR </h2>
-      </mat-grid-tile>
-      <mat-grid-tile rowspan="1" colspan="2" [style.background]="lightpink" >
-        <h2> DESTINATION NL </h2>
-      </mat-grid-tile>
-    
-  </mat-grid-list>
+
+
+<!--
+<mat-grid-list *ngFor="let line of lines" routerLink="/lines/{{line.number}}" cols="4" rowHeight="75px">
+  <mat-grid-tile [colspan]="1" [rowspan]="2" [style.background]="'#'+line.color">
+    <h2 [style.color]="'#'+line.text_color">{{line.number}} </h2>
+  </mat-grid-tile>
+  <mat-grid-tile [colspan]="2" [rowspan]="1" [style.background]="'lightgreen'">
+    <h2> {{line.destination.nl}}</h2>
+  </mat-grid-tile>
+  <mat-grid-tile [colspan]="2" [rowspan]="1" [style.background]="'lightpink'">
+    <h2> {{line.destination.fr}} </h2>
+  </mat-grid-tile>
+</mat-grid-list> -->
