--- a/src/web-app/app/stops/search/search.component.html
+++ b/src/web-app/app/stops/search/search.component.html
@@ -3,7 +3,7 @@
     <input matInput placeholder="Search a stop" aria-label="Search..." [matAutocomplete]="auto" [formControl]="stopCtrl">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option class="mat-option" *ngFor="let stop of filteredStops | async" [value]="stop.name">
-        <a routerLink="/stops/{{stop.id}}">{{stop.name}}</a>
+        <a routerLink="/stops/{{stop.id}}">{{stop.alpha_nl}}</a>
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
