--- a/src/web-app/app/stops/search/search.component.html
+++ b/src/web-app/app/stops/search/search.component.html
@@ -9,7 +9,5 @@
   </mat-form-field>
 </form>
 <section>
-  <agm-map class="map" [latitude]="latitude" [longitude]="longitude">
-
-  </agm-map>
+  <map-box></map-box>
 </section>
