--- a/src/web-app/app/app.component.html
+++ b/src/web-app/app/app.component.html
@@ -4,5 +4,5 @@
 </mat-toolbar> -->
 <div class="app-content">
   <router-outlet></router-outlet>
-  <app-messages></app-messages>
+  <!-- <app-messages></app-messages> -->
 </div>
