--- a/src/web-app/styles.scss
+++ b/src/web-app/styles.scss
@@ -101,3 +101,14 @@ Copyright 2017-2018 Google Inc. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
 can be found in the LICENSE file at http://angular.io/license
 */
+@import '~@angular/material/theming';
+@include mat-core();
+
+$my-app-primary: mat-palette($mat-blue);
+$my-app-accent:  mat-palette($mat-light-blue, 400, 200, 600);
+$my-app-warn:    mat-palette($mat-deep-orange);
+$my-app-foreground:    mat-palette($mat-gray, 900);
+
+$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
+
+@include angular-material-theme($my-app-theme);
