--- a/src/web-app/app/stops/detail/detail.component.html
+++ b/src/web-app/app/stops/detail/detail.component.html
@@ -1,16 +1,44 @@
 <div *ngIf="stop">
-  <a routerLink="/stops/search">Go Back</a>
-  <h2>{{ stop.name }}</h2>
+  <header class="header">
+    <a routerLink="/stops/search">Go Back</a>
+    <div class="header-title">
+      <h2>{{stop.alpha_nl}}</h2>
+      <h3>id:{{stop.id}}</h3>
+    </div>
+    <input type='file' accept="image/*" (change)="readURL($event);" />
+  </header>
   <div class="carousel">
-    <carousel [sources]="imageSources" [config]="config"></carousel>
+    <carousel *ngIf="enabledCaroussel" [sources]="imageSources" [config]="config"></carousel>
   </div>
-  <div><span>id: </span>{{stop.id}}</div>
-  <div>
-    <label>name: {{ stop.name }}</label>
-  </div>
-  <label>address:
+  <section>
+    <header>
+      <h4>Lines serving this stop</h4>
+    </header>
+    <article class="stop-line" *ngFor="let line of stop.transport">
+      <div class="flex">
+        <p class="line-type" [ngStyle]="{'color':line.textColor}">{{line.type}}</p>
+        <p class="line-number" [ngStyle]="{'color':line.textColor, 'background-color':line.backColor}">{{line.number}}</p>
+      </div>
+      <div>
+        <p>&rarr; {{line.direction.fr}}</p>
+        <p class="search-result-info-title">{{stop.alpha_nl}}</p>
+      </div>
+    </article>
+  </section>
+  <section>
+    <header>
+      <h4>Address</h4>
+    </header>
+    <article>
+      <div>{{stop.address.nl}}</div>
+      <a routerLink="/stops/{{stop.id}}/location">show on map</a>
+    </article>
+  </section>
+  <!-- <label>Proposed change:
     <input [(ngModel)]="stop.name" placeholder="name"/>
-  </label>
-  <a routerLink="/stops/{{stop.id}}/history">History</a>
-  <a routerLink="/stops/{{stop.id}}/update">Update</a>
+  </label> -->
+  <div class="buttons">
+    <a class="history-button" routerLink="/stops/{{stop.id}}/history">History</a>
+    <a class="update-button" (click)="goToQuestions()">Update</a>
+  </div>
 </div>
