--- a/src/web-app/app/stops/detail/detail.component.scss
+++ b/src/web-app/app/stops/detail/detail.component.scss
@@ -2,3 +2,71 @@
   width: 100vw;
   height: 400px
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
+}
+
+.header-title {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex {
+  display: flex;
+}
+
+.stop-line {
+  display: flex;
+  background-color: gainsboro;
+  color: black;
+  margin: 1rem;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-around;
+}
+
+.buttons a {
+  width: 50vw;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+}
+
+.history-button {
+  background-color: lightgrey;
+}
+
+.update-button {
+  background-color: gainsboro;
+}
+
+.buttons a:hover{
+  background-color: yellow;
+}
+
+.line-number, .line-type {
+  font-size: 16px;
+  margin: 0.2rem;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.line-type {
+  background-color: lightgrey;
+}
