Fix/correct mock (#89)
* basic file

* search to detail link

* modifications

* linked pages

* deleted unnecessary files

* fixed route-naming & disabled app-messages

* Merge frontend made by @paulinetahon

Co-Authored-By: paulinetahon <paulinetahon@users.noreply.github.com>

* made search dynamic

* Add documentation for stops and questions

* added type

* Merge changes from branch 'frontend' from branch 'frontetnd-pauline'

* Fix duplicate variables

* Correct doc questions

* Add stop format details

* Add address format details

* Ajust stop type details

* Correct line format

* Ajust line format  details

* Remove duplicate format

* Ajust history format details

* Ajust overview

* Correct formats.md

* Add details

* Add doc for POST inputs

* Update module to use mock only on dev env

* Update API_URL  var name

* Add stop mock data

* Add questions mock data

* Remove unnecessary component from shared

* Add Stop type

* Umprove  InMemoryDbService

* Remove unecessary component

* Import InMemoryDbService into module

* Update search.component && clean stop.service

* Add  result of empty search term

* Remove unecessary commented code

* Add data provider to send data

* Install hammerjs

* Create a module for material-design

* space

* added question type number component

* added question type boolean component

* Create questions module

* remove update component

* added question type multiple component

* Add mock route to get data

* Create Quetion class

* Add question.service

* Import && use the question.service

* Add yarn handler

* Remove express-validation package

* Disable routing log

* Move mockData handler to app.module

* Map to Stop

* Pass to true Backend if not intercepted

* Remove unecessary log

* Update stops.route.js

--- a/src/web-app/app/questions/question-types/number/number.component.css
+++ b/src/web-app/app/questions/question-types/number/number.component.css
@@ -1,17 +1,18 @@
 .number-component {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 1.5rem;    
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1.5rem;
 }
 .question {
-    font-size: 1.2rem;
-    line-height: 1.7rem;
-    color: rgba(29, 31, 49, 0.35);
-    width: 90%;
+  font-size: 1.2rem;
+  line-height: 1.7rem;
+  color: rgba(29, 31, 49, 0.35);
+  width: 90%;
 }
 
-::ng-deep .mat-form-field-infix, .number {
+::ng-deep .mat-form-field-infix,
+.number {
   width: 30% !important;
   display: flex;
   margin-left: auto;
@@ -19,7 +20,7 @@
 }
 
 .unit {
-    align-self: flex-end;
-    padding: 0 1rem .5rem 0;
-    font-size: 1.2rem;
+  align-self: flex-end;
+  padding: 0 1rem 0.5rem 0;
+  font-size: 1.2rem;
 }
