--- a/src/web-app/app/questions/question-types/boolean/boolean.component.css
+++ b/src/web-app/app/questions/question-types/boolean/boolean.component.css
@@ -1,21 +1,21 @@
 .boolean-component {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto; 
-    margin-bottom: 1.5rem;   
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1.5rem;
 }
 
 .question {
-    font-size: 1.2rem;
-    line-height: 1.7rem;
-    color: rgba(29, 31, 49, 0.35);
-    width: 90%;
+  font-size: 1.2rem;
+  line-height: 1.7rem;
+  color: rgba(29, 31, 49, 0.35);
+  width: 90%;
 }
 
 .buttons {
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
 }
 
 button {
@@ -23,11 +23,11 @@ button {
   height: 2.8rem;
   text-align: center;
   font-size: 1rem;
-  background: linear-gradient(to right, #E8E8E8 , #F3F3F3);
+  background: linear-gradient(to right, #e8e8e8, #f3f3f3);
 }
 
 .active {
-  background: linear-gradient(to right, #00C6FF , #0072FF);
+  background: linear-gradient(to right, #00c6ff, #0072ff);
   color: white;
-  box-shadow: 0 9px 22px -6px rgba(153, 208, 253, .50);
+  box-shadow: 0 9px 22px -6px rgba(153, 208, 253, 0.5);
 }
