--- a/src/web-app/app/questions/question-types/multiple/multiple.component.css
+++ b/src/web-app/app/questions/question-types/multiple/multiple.component.css
@@ -1,32 +1,31 @@
 .multiple-component {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto; 
-    margin-bottom: 1.5rem;   
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1.5rem;
 }
 .question {
-    font-size: 1.2rem;
-    line-height: 1.7rem;
-    color: rgba(29, 31, 49, 0.35);
-    width: 90%;
+  font-size: 1.2rem;
+  line-height: 1.7rem;
+  color: rgba(29, 31, 49, 0.35);
+  width: 90%;
 }
-  
+
 .buttons {
-    display: flex;
+  display: flex;
 }
-  
+
 button {
-    padding: .5rem 1rem;
-    height: 2.8rem;
-    text-align: center;
-    font-size: 1rem;
-    background: linear-gradient(to right, #E8E8E8 , #F3F3F3);
-    margin: 0 1rem .5rem 0;
+  padding: 0.5rem 1rem;
+  height: 2.8rem;
+  text-align: center;
+  font-size: 1rem;
+  background: linear-gradient(to right, #e8e8e8, #f3f3f3);
+  margin: 0 1rem 0.5rem 0;
 }
-  
-  .active {
-    background: linear-gradient(to right, #00C6FF , #0072FF);
-    color: white;
-    box-shadow: 0 9px 22px -6px rgba(153, 208, 253, .50);
-  }
-  
+
+.active {
+  background: linear-gradient(to right, #00c6ff, #0072ff);
+  color: white;
+  box-shadow: 0 9px 22px -6px rgba(153, 208, 253, 0.5);
+}
