Fix/correct mock (#90)
* basic file

* search to detail link

* modifications

* linked pages

* deleted unnecessary files

* fixed route-naming & disabled app-messages

* Merge frontend made by @paulinetahon

Co-Authored-By: paulinetahon <paulinetahon@users.noreply.github.com>

* made search dynamic

* Add documentation for stops and questions

* added type

* Merge changes from branch 'frontend' from branch 'frontetnd-pauline'

* Fix duplicate variables

* Correct doc questions

* Add stop format details

* Add address format details

* Ajust stop type details

* Correct line format

* Ajust line format  details

* Remove duplicate format

* Ajust history format details

* Ajust overview

* Correct formats.md

* Add details

* Add doc for POST inputs

* Update module to use mock only on dev env

* Update API_URL  var name

* Add stop mock data

* Add questions mock data

* Remove unnecessary component from shared

* Add Stop type

* Umprove  InMemoryDbService

* Remove unecessary component

* Import InMemoryDbService into module

* Update search.component && clean stop.service

* Add  result of empty search term

* Remove unecessary commented code

* Add data provider to send data

* Install hammerjs

* Create a module for material-design

* space

* added question type number component

* added question type boolean component

* Create questions module

* remove update component

* added question type multiple component

* Add mock route to get data

* Create Quetion class

* Add question.service

* Import && use the question.service

* Add yarn handler

* Remove express-validation package

* Disable routing log

* Move mockData handler to app.module

* Map to Stop

* Pass to true Backend if not intercepted

* Remove unecessary log

* Update stops.route.js

* Remove mock handler

* Ajust frontend to api data structure

* Correct the api data res

--- a/src/web-app/app/stops/detail/detail.component.html
+++ b/src/web-app/app/stops/detail/detail.component.html
@@ -2,7 +2,7 @@
   <header class="header">
     <a routerLink="/stops/search">Go Back</a>
     <div class="header-title">
-      <h2>{{stop.alpha_nl}}</h2>
+      <h2>{{stop.alpha["nl"]}}</h2>
       <h3>id:{{stop.id}}</h3>
     </div>
     <input type='file' accept="image/*" (change)="readURL($event);" />
@@ -30,7 +30,7 @@
       <h4>Address</h4>
     </header>
     <article>
-      <div>{{stop.address.nl}}</div>
+      <div>{{stop.address["nl"]}}</div>
       <a routerLink="/stops/{{stop.id}}/location">show on map</a>
     </article>
   </section>
