Front/nav styling (#94)
* basic file

* search to detail link

* modifications

* linked pages

* deleted unnecessary files

* fixed route-naming & disabled app-messages

* Merge frontend made by @paulinetahon

Co-Authored-By: paulinetahon <paulinetahon@users.noreply.github.com>

* made search dynamic

* Add documentation for stops and questions

* added type

* Merge changes from branch 'frontend' from branch 'frontetnd-pauline'

* Fix duplicate variables

* Correct doc questions

* Add stop format details

* Add address format details

* Ajust stop type details

* Correct line format

* Ajust line format  details

* Remove duplicate format

* Ajust history format details

* Ajust overview

* Correct formats.md

* Add details

* Add doc for POST inputs

* Update module to use mock only on dev env

* Update API_URL  var name

* Add stop mock data

* Add questions mock data

* Remove unnecessary component from shared

* Add Stop type

* Umprove  InMemoryDbService

* Remove unecessary component

* Import InMemoryDbService into module

* Update search.component && clean stop.service

* Add  result of empty search term

* Remove unecessary commented code

* Add data provider to send data

* Install hammerjs

* Create a module for material-design

* space

* added question type number component

* added question type boolean component

* detail page

* Create questions module

* remove update component

* added question type multiple component

* added question type string component

* css quick fix

* css styling header

* Add mock route to get data

* Create Quetion class

* Add question.service

* Import && use the question.service

* added progressbar

* fix after merging

* styling questions

* location page made

* styling multiple options component

* question styling

* shadow on buttons

* done and cancel button

* git fix

* Remove confl

--- a/src/web-app/app/my-octotrails-ng6-carousel/components/carousel/pins/assets/pins.styles.scss
+++ b/src/web-app/app/my-octotrails-ng6-carousel/components/carousel/pins/assets/pins.styles.scss
@@ -1,5 +1,3 @@
-$default-pin-color-red: #e55342;
-
 .carousel-nav-list {
   position: absolute;
   left: 0;
@@ -28,7 +26,7 @@ $default-pin-color-red: #e55342;
   }
 
   &__item--current {
-    background-color: $default-pin-color-red;
+    background: linear-gradient(to right, #00C6FF , #0072FF);
     opacity: 1;
   }
 
