--- a/src/web-app/app/stops/detail/detail.component.scss
+++ b/src/web-app/app/stops/detail/detail.component.scss
@@ -1,20 +1,6 @@
 .carousel {
   width: 100vw;
-  height: 400px
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100vw;
-}
-
-.header-title {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
+  height: 30rem;
 }
 
 .flex {
@@ -23,9 +9,12 @@
 
 .stop-line {
   display: flex;
-  background-color: gainsboro;
+  align-items: center;
+  background-color: #eeeded;
   color: black;
-  margin: 1rem;
+  margin: 0 auto;
+  height: 4.8rem;
+  margin: .5rem;
 }
 
 .buttons {
@@ -56,10 +45,12 @@
 }
 
 .line-number, .line-type {
-  font-size: 16px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: white;
   margin: 0.2rem;
-  width: 30px;
-  height: 30px;
+  width: 32px;
+  height: 32px;
   border-radius: 50%;
   background-position: center;
   display: flex;
@@ -69,4 +60,12 @@
 
 .line-type {
   background-color: lightgrey;
+  margin-left: 1rem;
+}
+
+.detail-info {
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
