Front feature/search styling (#96)
* test

* styling search balk

* results styling

* mobile fixes

* full screen map on all screens

--- a/src/web-app/app/stops/search/search.component.scss
+++ b/src/web-app/app/stops/search/search.component.scss
@@ -1,40 +1,84 @@
 /* StopSearch private styles */
 html {
-  font-size: 16px;
-}
-
-::ng-deep .mat-form-field-wrapper {
-  width: 100vw;
+  font-size: 1.6rem;
 }
 
 // ::ng-deep .mat-autocomplete-panel {
 //   background-color: rgba(255,255,255,.8);
 // }
 
+.search-section {
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    width: 100%;
+    margin-top: 2rem;
+    position: fixed;
+}
+
+.search-component {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.search-form-field {
+    font-size: 1.4rem;
+}
+
+::ng-deep .mat-form-field{
+    background-color: rgba(255, 255, 255, .90);
+    border-radius: 5px;
+    border: 2px solid rgba(255, 255, 255, .90);
+    padding: 1rem 2rem 0 2rem;
+    width: 90%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+}
+
+::ng-deep .cdk-overlay-pane {
+    width: 90% !important;
+    top: 75.0625px !important;
+    left: 5% !important;
+}
+
+::ng-deep .mat-autocomplete-panel.mat-autocomplete-visible {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1) !important; 
+}
+
 ::ng-deep .mat-option {
   display: flex;
-  margin: 1rem;
-  background-color: lightgrey;
-  height: 6rem !important;
+  margin: 1.5rem 2rem;
+  border-bottom: 1px solid lightgrey;
   padding: 0;
+  height: auto !important;
+  line-height: normal !important;
+}
+
+.search-result-text {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .search-result-info {
-  height: 5rem !important;
-}
-
-.search-result-info-more {
   margin-top: 10px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.arrow {
+    width: 14px;
+    height: 20px;
+    align-self: flex-end;
+    margin-top: 0.8rem;
+    color: #ffffff;
 }
 
 .search-result-info-title {
   color: black;
   font-size: 20px;
   font-weight: bold;
-  height: 20% !important;
-  margin-top: -1rem;
 }
 
 .search-result {
@@ -54,7 +98,6 @@ html {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  //background-color: orange;
   color: white;
   background-position: center;
   display: flex;
@@ -68,14 +111,10 @@ html {
   color: black;
 }
 
-.search-result-info-type {
-  width: 25px;
-  height: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: red;
-  color: white;
+.search-result-info-direction {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .cdk-overlay-pane {
@@ -88,46 +127,12 @@ html {
   height: 100vh;
 }
 
-//
-// .search-result li {
-//   border-bottom: 1px solid gray;
-//   border-left: 1px solid gray;
-//   border-right: 1px solid gray;
-//   width:195px;
-//   height: 16px;
-//   padding: 5px;
-//   background-color: white;
-//   cursor: pointer;
-//   list-style-type: none;
-// }
-//
-// .search-result li:hover {
-//   background-color: #607D8B;
-// }
-//
-// .search-result li a {
-//   color: #888;
-//   display: block;
-//   text-decoration: none;
-// }
-
-// .search-result li a:hover {
-//   color: white;
-// }
-// .search-result li a:active {
-//   color: white;
-// }
-
-// #search-box {
-//   width: 200px;
-//   height: 20px;
-// }
-
-.map {
-  height: 100vw;
+::ng-deep .map {
+    height: 100vh !important;
+    width: 100vw !important;
 }
 
-// ul.search-result {
-//   margin-top: 0;
-//   padding-left: 0;
-// }
+::ng-deep .mapboxgl-canvas {
+    height: 100vh !important;
+    width: 100vw !important;
+}
