--- a/src/web-app/styles.scss
+++ b/src/web-app/styles.scss
@@ -135,4 +135,5 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 .section-title {
   font-size: 1.6rem;
   font-weight: bold;
+  padding-bottom: 1rem;
 }
