--- a/src/web-app/app/stops/location/location.component.css
+++ b/src/web-app/app/stops/location/location.component.css
@@ -1,17 +1,3 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100vw;
-}
-
-.header-title {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.map {
+.location {
   height: 100vw;
 }
