--- a/src/web-app/app/questions/overview/overview.component.html
+++ b/src/web-app/app/questions/overview/overview.component.html
@@ -1,5 +1,5 @@
 <div class="heading">
-  <a class="backbutton" routerLink="/stops/{{stop_id}}">
+  <a class="backbutton" (click)="cancel()">
     <svg version="1.1"
     	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
     	 x="0px" y="0px" width="14.3px" height="24px" viewBox="0 0 14.3 24" style="enable-background:new 0 0 14.3 24;"
@@ -31,5 +31,5 @@
 
 <div class="end-buttons">
   <button class="done-button" (click)="saveAnswers()">Done</button>
-  <a class="cancel" routerLink="/stops/8022">Cancel</a>
+  <a class="cancel" (click)="cancel()">Cancel</a>
 </div>
